kubernetes/network/koubou-entry/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: koubou-entry
  labels:
    kensan-lab.platform/environment: infrastructure
    istio-injection: disabled
