kubernetes/network/koubou-entry/endpoint-slice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: koubou-sense-lan
  namespace: koubou-entry
  labels:
    kubernetes.io/service-name: koubou-sense
    endpointslice.kubernetes.io/managed-by: kensan-lab.gitops
addressType: IPv4
ports:
- name: http
  port: 8790
  protocol: TCP
endpoints:
- addresses:
  - 192.168.0.113
  conditions:
    ready: true
