kubernetes/network/koubou-entry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: koubou-sense
  namespace: koubou-entry
spec:
  ports:
  - name: http
    port: 8790
    targetPort: 8790
    protocol: TCP
