kubernetes/network/koubou-entry/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: koubou
  namespace: koubou-entry
spec:
  parentRefs:
  - name: gateway-platform
    namespace: istio-system
    sectionName: https
  hostnames:
  - koubou.platform.yu-min3.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: koubou-sense
      port: 8790
